Attempt to fix H2 formatting issue on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -737,7 +737,7 @@ form {
 		height: auto;
 	}
 	
-	.carousel-caption a, h2 {
+	.carousel-caption a {
 		text-align: center;
 		margin-bottom: 10px;
 		font-size: 16px;
